# databricks-claude-code-ai-engineering

./: .env.template  .gitignore  Claude.MD  README.md  databricks.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/agents/: ai-engineer.md  data-engineer.md  databricks-researcher.md  environment-manager.md  product-manager  product-manager.md
.claude/commands/: search-docs.md
docs/: setup-guide.md
docs/ai-examples/: agent-tools.md  databricks_langgraph_tool_calling_agent.py  mlflow-workflows.md  mlflow_chat_agent.py  mlflow_pyfunc_log_and_deploy_agent.py  uc_tools_example.py  vector-search-guide.md  vector_search_example.py
docs/api-reference/: databricks-sdk.md
docs/best-practices/: security-guidelines.md
docs/databricks-context/: databricks-agent-framework-authoring.md  mlflow3-local-environment.md  mlflow3-tracing-ide.md
docs/devops-examples/: ci-cd.pipeline.md
notebooks/: langgraph_agent_demo.py
scripts/: test_comprehensive_connection.py
